# bcompiler-engine

./: .build.yml  .coveralls.yml  .gitignore  .travis.yml  CHANGELOG.md  LICENSE.txt  Makefile  Pipfile  README.md  ROADMAP.md  TODO.md  mypy.ini  noxfile.py  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
bcompilerengine/: bcompiler.py  main.py  parser.py
engine/: __init__.py  config.py  datamap.py  exceptions.py  parser.py
engine/adapters/: cli.py
engine/domain/: datamap.py  template.py
engine/parser/: reader.py
engine/reports/: validation.py
engine/repository/: __init__.py  datamap.py  master.py  templates.py
engine/serializers/: datamap.py  template.py
engine/use_cases/: output.py  parser.py  parsing.py  typing.py
engine/utils/: __init__.py  extraction.py  validation.py
scripts/: install-hooks.bash  pre-push.bash
tests/: conftest.py  test_configuration.py  test_datamap_parser.py  test_hashing.py  test_pickling.py  test_template_parser.py
tests/adapters/: test_cli.py
tests/reports/: test_csv_validation_report.py
tests/repository/: test_in_memory_repos.py  test_master_output_repo.py
tests/resources/: bad_sheet_template.xlsm  blank_template.xlsm  blank_template_password_removed.xlsm  blank_template_password_removed.xlsx  datamap.csv  datamap_empty_cols.csv  datamap_empty_tail_rows.csv  datamap_match_test_template.csv  datamap_match_test_template_incorrect_type_descriptor.csv  datamap_match_test_template_with_missing_val_match_template_equiv.csv  datamap_missing_fields.csv  datamap_missing_key_fields.csv  datamap_missing_one_type.csv  datamap_moderately_bad_headers.csv  datamap_no_type_col.csv  datamap_no_type_col_matches_test_template.csv  datamap_reduced.csv  datamap_single_header.csv  datamap_three_headers.csv  datamap_two_headers.csv  datamap_very_bad_headers.csv  master.xlsx  master_empty_col_a.xlsx  master_values_beyond_end_of_col_and_row_range.xlsx  pop_template_for_datamap_test.xlsm  test.xml  test_dat_file_use_case.xlsx  test_data_file_use_case_diff_data_from_dat_file.xlsx  test_template.xlsx  test_template2.xlsx  test_template3.xlsx  test_template_incorrect_type.xlsx  test_template_with_empty_cells_expected_by_datamap.xlsm  test_template_with_introduction_sheet.xlsm
tests/resources/datamaps_all_encodings/: datamap_UTF8.csv  datamap_comma_delimited.csv  datamap_macintosh.csv  datamap_note_pad_ansi.csv  datamap_note_pad_unicode.csv  datamap_note_pad_unicode_big_endian.csv  datamap_note_pad_utf8.csv  datamap_unicode_text.csv
tests/resources/org_templates/: blank_template.xlsm  dft1_tmp (copy 17).xlsm  dft_datamap.csv
tests/serializers/: test_datamap_serializers.py  test_template_data_serializers.py
tests/use_cases/: test_datamap_use_cases.py  test_master_from_org_templates.py  test_populate_templates_from_master.py  test_spreadsheet_reading.py  test_template_parser_use_cases.py  test_validation.py
tests/utils/: test_error_reporting.py  test_utils.py  test_validation.py
